--- a/game store.html
+++ b/game store.html
@@ -29,9 +29,8 @@
                 <input placeholder="start typing..." />
                 <button class="btn">SEARCH</button>
             </div>
-            <div class="landing-page-image">
-                <img src="images/gamer-playing-desktop-pc-computer-gaming-illustration_691560-5822.avif"
-                width="250px">
+            <div>
+                <img class="landing-page-image" src="images/gamer-playing-desktop-pc-computer-gaming-illustration_691560-5822.avif">
             </div>
         </div>
     </div>
